# vehiculo-autonomo-telemetria

./: CMakeLists.txt  README.md
clients/java-client/src/: TelemetryClient.java
clients/python-client/: README.md  requirements.txt  telemetry_client.py
docs/: protocol.md
src/: ejemplo.c  server.c
